# advent_of_code

./: .gitignore  Cargo.toml  README.md
2021/: .gitignore  Cargo.toml
2021/src/: day11.rs  day14.rs  day15.rs  day6.rs  day9.rs
2021/src/day13/: parser.rs
2021/src/day16/: parser.rs
2022/: Cargo.toml  README.md
2023/: Cargo.toml  justfile
2023/daily-template/: Cargo.toml
2023/daily-template/benches/: benchmarks.rs
2023/daily-template/src/: custom_error.rs  parser.rs  part1.rs  part2.rs
2023/day-01/: Cargo.toml
2023/day-01/benches/: benchmarks.rs
2023/day-01/src/: custom_error.rs  part1.rs  part2.rs
2023/day-02/: Cargo.toml
2023/day-02/benches/: benchmarks.rs
2023/day-02/src/: lib.rs  parser.rs  part1.rs  part2.rs
2023/day-03/: Cargo.toml
2023/day-03/benches/: benchmarks.rs
2023/day-03/src/: lib.rs  parser.rs  part1.rs  part2.rs
2023/day-04/: Cargo.toml
2023/day-04/benches/: benchmarks.rs
2023/day-04/src/: custom_error.rs  lib.rs  parser.rs  part1.rs  part2.rs
2023/day-05/: Cargo.toml
2023/day-05/benches/: benchmarks.rs
2023/day-05/src/: custom_error.rs  lib.rs  part1.rs  part2.rs
2023/day-05/src/part1/: parser.rs  range_map.rs  seed_map.rs
2023/day-05/src/part2/: parser.rs  range_map.rs  seed_map.rs
2023/day-06/: Cargo.toml
2023/day-06/benches/: benchmarks.rs
2023/day-06/src/: part1.rs  part2.rs
2023/day-06/src/part1/: parser.rs
2023/day-06/src/part2/: parser.rs
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day16.rs  day17.rs  day2.rs  day3.rs  day4.rs  day5.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  new_day.rs
src/day14/: parser.rs
src/day15/: parser.rs
src/day16/: parser.rs
