[workspace]
resolver = "2"

members = ["day-*"]

[workspace.dependencies]
anyhow = "1.0.75"
thiserror = "1.0.50"

derive_more = "0.99.17"
itertools = "0.12.0" # https://crates.io/crates/itertools
nom = "7.1.3"        # https://crates.io/crates/nom

derive-new = "0.6.0"
enum_dispatch = "0.3.12"
rand = "0.8.5"
time = "0.3.30"
glam = "0.24.2"      # https://crates.io/crates/glamx
petgraph = "0.6.4"   # https://crates.io/crates/petgraph
strum = "0.25.0"
rayon = "1.8.0"
indicatif = "0.17.7"

# Testing framework
test-log = { version="0.2.13", features=["trace"], default-features = false }
rstest = "0.18.2"      # https://crates.io/crates/rstest
rstest_reuse = "0.6.0" # https://crates.io/crates/rstest_reuse
indoc = "2.0.4"

# Logging/benchmarking/profiling
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "tracing-log",
] }
divan = "0.1.3"
tracing-tracy = "0.10.4"
tracy-client = "0.16.4"
tracy-client-sys = "0.22.0"
dhat = "0.3.2" # docs: https://docs.rs/dhat/0.3.2/dhat/   viewer: https://nnethercote.github.io/dh_view/dh_view.htmlx

[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
